--- a/Smart-Home/styles.css
+++ b/Smart-Home/styles.css
@@ -1,53 +1,33 @@
 body {
+  margin: 0px;
     color: #000;
     background-color: #BFB2AA;
       }
-      .header {
+      main{
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+     
+      .navbar ul{
+        list-style-type: none;
         background-color: #262120;
         padding: 20px;
-        text-align: start;
+        margin: 0px;
+        overflow: hidden;
       }
-
-      [class^="box"] {
-        color:white;
-        font-size: 100px;
-        text-align: justify;
-        text-shadow:4px 4px 0 rgba(0,0,0,0.1);
-        padding:10px;
+      .navbar a{
+        color: white;
+        text-decoration: none;
+        padding: 15px;
+        display: flex;
+        text-align: center;
       }
-
-.flex-container {
-    border:10px solid rgb(0, 0, 0);
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-items: stretch;
-    height: 100vh;
-    align-content: space-evenly;
-    max-width: 1280px;
-    margin: 0 auto;
-  }
-
-  [class^="box"] {
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
- }
-
-    .box1 {
-    
-    width: 98%;
-    height: 29vh;
-    }
-    .box2 {
-        width: calc(97% / 2);
-        height: 29vh;
-        }
-        .box3 {
-        width: calc(97% / 2);
-        height: 29vh;
-        }
+      .navbar a:hover {
+        background-color: #1a1616;
+      }
+      .navbar li{
+        float: left;
+      }
 
         .text {
 
