--- a/Smart-Home/styles.css
+++ b/Smart-Home/styles.css
@@ -1,11 +1,17 @@
 body {
-  margin: 0px;
-    color: #000;
-    background-color: #BFB2AA;
-      }
-      main{
-        margin-left: 20px;
+  margin: 0;
+  padding: 0;
+  background-color: black;
+}
+      main {
+        margin-left: 0px;
         margin-right: 20px;
+      }
+
+      #pagewrapper {
+        max-width: 1440px;
+        margin: 0 auto;
+        background-color: #BFB2AA;
       }
 
       nav {
@@ -17,6 +23,7 @@ body {
       .navlogo {
         width: 108px;
         height: 108px;
+        transform: translate(-2rem);
       }
 
       .navbar {
@@ -32,6 +39,9 @@ body {
         text-decoration: none;
         padding: 0px;
         background-color: #59514C;
+        flex-direction: row;
+        justify-content: center;
+        flex-shrink: 0;
       }
       
       
@@ -43,10 +53,13 @@ body {
         width: 262px; 
         height: 57px;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         flex-shrink: 0;
-        
+        align-items: center;
+        border-radius: 5px;
+        transform: translate(-3rem);
       }
+
 
       .text {
         display: flex;
@@ -56,27 +69,43 @@ body {
         justify-content: center;
         flex-shrink: 0;
         color: #000;
-        font-family: Jomolhari;
+        font-family: "Jomolhari";
         font-size: 20px;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
     }
 
-    .container{
-      width: 85vmin;
-      position: absolute;
-      transform: translate(-50%,-50%);
-      top: 50%;
-      left: 50%;
+    .text3 {
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      color: #000;
+      font-family: "Jomolhari";
+      font-size: 40px;
+      padding: 3rem;
+      background-color: #D9D9D9;
+      border: 1px solid black;
+      border-radius: 5px;
+    }
+
+    .container {
+      width: 120vmin;
+      display: flex;
+      margin: 0 auto;
       overflow: hidden;
       border: 5px solid #000;
       border-radius: 8px;
     }
+
+.wrapcon {
+  padding: 3rem;
+}
+
     .wrapper{
       display: flex;
       animation: slide 16s infinite;
-      width: 100%
+      width: 100%;
     }
     @keyframes slide{
       0%{
@@ -104,20 +133,30 @@ body {
         transform: translateX(-300);
       }
     }
-    img{
+    .img {
       width: 100%;
     }
    
 
         .footer {
             background-color: #262120;
-            text-align: center;
-            padding: 10px;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            padding: 10x;
             color: #D9D1CC;
-            text-align: center;
-            font-family: Jomolhari;
-            font-size: 38px;
+            font-family: "Jomolhari";
+            font-size: 32px;
             font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-          }
+            font-weight: lighter;
+        }
+
+        .footerlogo {
+          width: 150px;
+          height: 150px;
+        }
+
+        .footer p {
+          display: flex;
+          transform: translate(2rem);
+        }
