--- a/Smart-Home/styles.css
+++ b/Smart-Home/styles.css
@@ -8,15 +8,24 @@ body {
         margin-left: 100px;
         margin-right: 100px;
       }
+     
+      h1 {
+        font-size: 54px;
+        font-weight: lighter;
+        display: flex;
+        justify-content: center;
+        margin-top:5px;
 
-    
-            
+
+      }
+
 
       #pagewrapper {
         max-width: 1440px;
         margin: 0 auto;
         background-color: #BFB2AA;
       }
+
 
       nav {
         height: 113px;
@@ -30,11 +39,13 @@ body {
         transform: translate(-2rem);
       }
 
+
       .navbar {
         display: flex;
         align-items: center;
         justify-content: space-evenly;
       }
+
 
       .navbar a{
         display: flex;
@@ -47,14 +58,14 @@ body {
         justify-content: center;
         flex-shrink: 0;
       }
-      
-      
+     
+     
       .navbar a:hover {
         background-color: #1a1616;
       }
       .navtabs {
         display: flex;
-        width: 262px; 
+        width: 262px;
         height: 57px;
         flex-direction: column;
         justify-content: space-between;
@@ -63,8 +74,27 @@ body {
         border-radius: 5px;
         transform: translate(-3rem);
       }
-      
-      .card-container{
+
+
+      .card-container-home {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 40px;
+        padding: 2rem;
+      }
+
+
+      .card-container-home1 {
+        padding-top: 1rem;
+        padding-bottom: 3rem;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        flex-direction: row;
+      }
+     
+      .card-container {
         max-width: 5%;
         margin: 50px auto;
         display: flex;
@@ -74,12 +104,13 @@ body {
         justify-content: center;
       }
 
+
       .card{
-        flex: 1;
         background-color: #D9D9D9;
         border-radius: 10px;
         box-shadow: 0 0 10px;
       }
+
 
       .card img{
         width: 100%;
@@ -87,9 +118,12 @@ body {
         border-radius: 10px;
       }
 
+
       .card-content{
       padding: 20px;
       }
+
+
 
 
       .text {
@@ -107,6 +141,7 @@ body {
         line-height: normal;
     }
 
+
     .text2 {
       display: flex;
       flex-direction: row;
@@ -118,9 +153,10 @@ body {
       width: 361px;
       height: auto;
       background-color: #D9D1CC;
-      justify-content: center; 
+      justify-content: center;
       border-radius: 10px;
     }
+
 
     .text3 {
       display: flex;
@@ -138,6 +174,7 @@ body {
       margin: 50px auto;
     }
 
+
     .container {
       width: 120vmin;
       display: flex;
@@ -147,9 +184,11 @@ body {
       border-radius: 10px;
     }
 
+
   .wrapcon {
   padding: 3rem;
   }
+
 
     .wrapper{
       display: flex;
@@ -182,10 +221,12 @@ body {
         transform: translateX(-300%);
       }
     }
+   
     .img {
       width: 100%;
     }
    
+
 
         .footer {
             background-color: #262120;
@@ -200,12 +241,16 @@ body {
             font-weight: lighter;
         }
 
+
         .footerlogo {
           width: 150px;
           height: 150px;
         }
 
+
         .footer p {
           display: flex;
           transform: translate(2rem);
         }
+
+
