--- a/Smart-Home/styles.css
+++ b/Smart-Home/styles.css
@@ -14,8 +14,10 @@ body {
         font-weight: lighter;
         display: flex;
         justify-content: center;
-        margin-top:5px;
+        margin-bottom: 1px;
       }
+
+
 
 
       #pagewrapper {
@@ -23,6 +25,8 @@ body {
         margin: 0 auto;
         background-color: #BFB2AA;
       }
+
+
 
 
       nav {
@@ -38,11 +42,15 @@ body {
       }
 
 
+
+
       .navbar {
         display: flex;
         align-items: center;
         justify-content: space-evenly;
       }
+
+
 
 
       .navbar a{
@@ -74,6 +82,8 @@ body {
       }
 
 
+
+
       .card-container-home {
         display: flex;
         flex-direction: row;
@@ -81,6 +91,8 @@ body {
         gap: 40px;
         padding: 2rem;
       }
+
+
 
 
       .card-container-home1 {
@@ -103,11 +115,15 @@ body {
       }
 
 
+
+
       .card{
         background-color: #D9D9D9;
         border-radius: 10px;
         box-shadow: 0 0 10px;
       }
+
+
 
 
       .card img{
@@ -117,9 +133,15 @@ body {
       }
 
 
+
+
       .card-content{
       padding: 20px;
       }
+
+
+
+
 
 
 
@@ -140,6 +162,8 @@ body {
     }
 
 
+
+
     .text2 {
       display: flex;
       flex-direction: row;
@@ -154,6 +178,8 @@ body {
       justify-content: center;
       border-radius: 10px;
     }
+
+
 
 
     .text3 {
@@ -173,6 +199,8 @@ body {
     }
 
 
+
+
     .container {
       width: 120vmin;
       display: flex;
@@ -183,9 +211,22 @@ body {
     }
 
 
+
+
   .wrapcon {
   padding: 3rem;
   }
+
+
+  .card-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    max-width: 1300px;
+    padding: 20px;
+  }
+
+
 
 
     .wrapper{
@@ -226,6 +267,8 @@ body {
    
 
 
+
+
         .footer {
             background-color: #262120;
             display: flex;
@@ -240,15 +283,17 @@ body {
         }
 
 
+
+
         .footerlogo {
           width: 150px;
           height: 150px;
         }
 
 
+
+
         .footer p {
           display: flex;
           transform: translate(2rem);
         }
-
-
